Fixed alignment for logo. Both mobile and computer.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -729,7 +729,7 @@ background-size: cover;
 
 /* The details of your blog. Defined in ghost/settings/ */
 .page-title {
-    margin: 10px 0px 5px 17px;
+    margin: 10px 5px 5px 13px;
     font-size: 5rem;
     letter-spacing: -1px;
     font-weight: 700;
@@ -1544,7 +1544,7 @@ margin-right: 0.2em;
     .page-description {
         font-size: 1.8rem;
         line-height: 1.5em;
-        margin: 0px 0px 0px 2px;
+        margin: 0px 6px 0px 8px;
     }
 
     .post {
